# b-parasite

./: .gitignore  README.md  blinky_bparasite_nrf52840_2.0.0ry1.uf2
.github/workflows/: b-parasite.yml
code/: README.md
code/nrf-connect/prstlib/boards/bparasite/: Kconfig.bparasite  Kconfig.defconfig  board.cmake  board.yml  bparasite_nrf52833.dts  bparasite_nrf52840.dts
code/prstlib/: CMakeLists.txt  Kconfig  west.yml
code/prstlib/boards/bparasite/: Kconfig.bparasite  Kconfig.defconfig  Kconfig.regout0  board.cmake  board.yml  bparasite_nrf52833.dts  bparasite_nrf52840.dts  bparasite_nrf52840_2_0_0_ry1.overlay  bparasite_nrf52840_2_0_0_ry1_defconfig  revision.cmake
code/prstlib/include/prstlib/: board_regulator.h
code/prstlib/snippets/dev/: dev.conf  dev.overlay  snippet.yml
code/prstlib/src/: adc.c  board_regout0.c
code/samples/ble/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
code/samples/ble/snippets/dev/: dev.conf  dev.overlay
code/samples/ble/src/: encoding.c
code/samples/blinky/: CMakeLists.txt
code/samples/input/: CMakeLists.txt
code/samples/soil-read-loop/: CMakeLists.txt  app.overlay  prj.conf
code/samples/soil-read-loop/src/: main.c
code/samples/zigbee/: CMakeLists.txt  Kconfig  README.md  dev.overlay  pm_static.yml  prj.conf  prj_debug.conf
code/samples/zigbee/snippets/dev/: dev.conf
code/samples/zigbee/src/: main.c
code/scripts/: build-with-docker.sh  build.sh
kicad/: fp-lib-table  parasite.kicad_pcb  parasite.kicad_pro  parasite.kicad_sch
